2006-07-24  Sami Wagiaalla  <swagiaal@redhat.com>

	* TestTaskSyscallObserver.java: Added test for adding syscall observer
	to an attached state.
	Added test to check that frysk doesnt miss first exec syscall.
	Enabled some tests. 
	* TaskState.java (handleAddSyscallObserver): Added 
	handleAddSyscallObserver to state BlockedSignal.

2006-07-22  Mark Wielaard  <mark@klomp.org>

	* StressAttachDetachManyTasks.java (test): Mark broken 2468.
	* StressAttachDetachRapidlyCloningMainTask.java (test): Mark broken
	2956.
	* TestTaskObserverDetach.java (testDetachClone): Mark broken 2744.

2006-07-22  Andrew Cagney  <cagney@redhat.com>

	* StressAttachDetachSignaledTask.java: Mark broken tests.
	* TestProcTasksObserver.java: Mark broken tests.

2006-07-20  Tim Moore  <timmore@redhat.com>

	* Task.java (Task.TaskException): New exception class.
	(getSyscallEventInfo, getDwflLineXXX, sendrecIsa): Throw it.
	(notifySyscallEnter, notifySyscallExit): Catch it.
	* LinuxHost.java (sendCreateAttachedProc, cloneEvent, forkEvent): Catch
	TaskException. 
	* LinuxTask.java (LinuxTask): Throw TaskException.
	(sendrecIsa): throw TaskException, use the task's executable to
	determine the ISA.
	* TestI386Modify.java (updateSyscallEnter, TestI386ModifyInternals):
	Catch TaskException.
	* TestI386Regs.java (updateSyscallEnter, TestI386RegsInternals): ditto.
	* TestTaskSyscallObserver.java (getSyscallEventInfo): New method that
	handles TaskException.
	(updateSyscallEnter, updateSyscallExit): Use it.
	

2006-07-19  Sami Wagiaalla  <swagiaal@redhat.com>

	* TestTaskSyscallObserver.java (testExecSyscall): Added test
	for while in syscall tracing mode and clone while in syscall
	tracing mode.
	* TaskState.java: Added handling for Fork and clone to state
	runningInSyscall.
	* Syscall.java (syscallByNum): Returns unknow syscall
	instead of crashing when an unkown syscall is requested.

2006-07-18  Sami Wagiaalla  <swagiaal@redhat.com>
